opam-version: "2.0"
tags: ["font" "fontforge" "binding"]
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.09.0"}
  "base" {>= "v0.12.2"}
  "fmt" {>= "0.8.9"}
  "pyml" {>= "20200518"}
  "ppx_python" {>= "v0.12.0"}
  "odoc" {with-doc}
]
depopts: ["conf-python-3" "headache"]
conflicts: [
  "headache" {< "1.05"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
name: "fontforge-of-ocaml"
version: "1.1.0"
synopsis: "OCaml binding of FontForge"
description: """
Library providing OCaml binding of FontForge Python API
"""
maintainer: "http://github.com/pbaudin"
authors: [
  "Patrick Baudin"
]
license: "LGPL-2.1-only"
homepage: "http://github.com/pbaudin/fontforge-of-ocaml"
bug-reports: "https://github.com/pbaudin/fontforge-of-ocaml/issues"
dev-repo: "git+https://github.com/pbaudin/fontforge-of-ocaml"
messages: [
  "The use of fontforge-of-ocaml library requires python3."
  {! conf-python-3:installed}
]
post-messages: [
  "On Ubuntu, the use of fontforge-of-ocaml library requires python3-fontforge package."
]
