;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                            ;;
;;  This file is part of fontforge-of-ocaml library                           ;;
;;                                                                            ;;
;;  Copyright (C) 2017-2022, Patrick BAUDIN                                   ;;
;;                           (https://github.com/pbaudin/fontforge-of-ocaml)  ;;
;;                                                                            ;;
;;  you can redistribute it and/or modify it under the terms of the GNU       ;;
;;  Lesser General Public License as published by the Free Software           ;;
;;  Foundation, version 2.1.                                                  ;;
;;                                                                            ;;
;;  It is distributed in the hope that it will be useful, but WITHOUT ANY     ;;
;;  WARRANTY; without even the implied warranty of MERCHANTABILITY or         ;;
;;  FITNESS FOR A PARTICULAR PURPOSE.                                         ;;
;;                                                                            ;;
;;  See the GNU Lesser General Public License version 2.1                     ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1)                 ;;
;;                                                                            ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(env
  (dev
    (flags (:standard -w -37+50))))

(library
  (name FontForge)
  (public_name fontforge-of-ocaml)
  (modules FontForge Core LookupTables Util)
  (private_modules Core LookupTables Util)
  (libraries base fmt pyml ppx_python)
  (preprocess (pps ppx_python))
)
