;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                            ;;
;;  This file is part of fontforge-of-ocaml library                           ;;
;;                                                                            ;;
;;  Copyright (C) 2017-2022, Patrick BAUDIN                                   ;;
;;                           (https://github.com/pbaudin/fontforge-of-ocaml)  ;;
;;                                                                            ;;
;;  you can redistribute it and/or modify it under the terms of the GNU       ;;
;;  Lesser General Public License as published by the Free Software           ;;
;;  Foundation, version 2.1.                                                  ;;
;;                                                                            ;;
;;  It is distributed in the hope that it will be useful, but WITHOUT ANY     ;;
;;  WARRANTY; without even the implied warranty of MERCHANTABILITY or         ;;
;;  FITNESS FOR A PARTICULAR PURPOSE.                                         ;;
;;                                                                            ;;
;;  See the GNU Lesser General Public License version 2.1                     ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1)                 ;;
;;                                                                            ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(executable
  (name test_FontForgeLib)
  (modules test_FontForgeLib)
  (libraries base fmt fontforge-of-ocaml pyml)
)

(rule
 (deps FreeMonoBold.ttf FreeMono.ttf)
 (action (with-outputs-to test_FontForgeLib.result (run %{dep:./test_FontForgeLib.exe}))))

(rule
 (alias debugtest)
 (deps FreeMonoBold.ttf FreeMono.ttf)
 (action (run %{dep:./test_FontForgeLib.exe})))

(rule
 (alias runtest)
 (action (diff test_FontForgeLib.log test_FontForgeLib.result)))
